--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "jquery": "^3.3.1",
     "vue": "^2.5.2",
     "vue-moment": "^4.0.0",
     "vue-resource": "^1.5.1",
