--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "vue-template-compiler": "^2.5.2",
     "webpack": "^4.16.5",
     "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-cli": "^3.1.0",
     "webpack-dev-server": "^3.1.5",
     "webpack-merge": "^4.1.0"
   },
