--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,5 @@
+### Vuejs ###
+node_modules
 .DS_Store
-node_modules/
-/dist/
-npm-debug.log*
-
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+docs/_book
+test/
