--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
     "@fortawesome/fontawesome-free": "^5.5.0",
     "axios": "^0.18.0",
     "vue": "^2.5.17",
-    "vue-i18n": "^8.5.0",
+    "vue-i18n": "8.11.1",
     "vue-moment": "^4.0.0",
     "vue-router": "^3.0.1",
+    "vuetify": "^1.5.8",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -21,7 +22,6 @@
     "@vue/cli-plugin-eslint": "^3.0.5",
     "@vue/cli-service": "^3.0.5",
     "babel-eslint": "^10.0.1",
-    "bulma": "^0.7.2",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
     "node-sass": "^4.10.0",
